# auto-cal

./: .gitignore  Cargo.toml
src/: command_handlers.rs  main.rs  prelude.rs
src/cli/: mod.rs
src/io/: mod.rs  read.rs  write.rs
src/task/: create.rs  display.rs  edit.rs  mod.rs
