[package]
name = "auto-cal"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.3"
# tokio = { version ="1.41.1", features = ["full"] }
clap = { version = "4.5.21", features = ["cargo", "derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
uuid = { version = "1.11.0", features = ["serde", "v4"] }


[dev-dependencies]
anyhow = "1.0.93"
